--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -76,9 +76,15 @@
         margin: 5px auto;
         max-width: 75%;
     }
-    .socials,
     .navigation {
         margin: auto;
+    }
+    .socials {
+        margin: auto;
+        width: 25%;
+    }
+    .socials a {
+        margin: auto 10px;
     }
     .spotlights {
         grid-column: 1/6;
