--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -49,6 +49,9 @@
     margin: 10px auto;
     max-width: 100px;
 }
+.menu-button {
+    font-size: 3em;
+}
 .navigation {
     list-style: none;
     text-align: center;
@@ -60,7 +63,7 @@
 .navigation li {
     display: none;
 }
-.navigation a {
+.nav-link {
     display: block;
     padding: 0.75rem;
     text-align: center;
